objects/Branch_Product__c.object
<CustomObject>
    <description>Products at Plant</description>
    <fields>
        <fullName>Abc_Code_1_Margin_Inventory__c</fullName>
        <label>Abc Code 1 Margin Inventory</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abc_Code_1_Sales_Inventory__c</fullName>
        <label>Abc Code 1 Sales Inventory</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abc_Code_Override_Indicator__c</fullName>
        <label>Abc Code Override Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Cost_Quantity__c</fullName>
        <label>Accounting Cost Quantity</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aia_Document_Flag__c</fullName>
        <label>Aia Document Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backorders_Allowed_Flag__c</fullName>
        <label>Backorders Allowed Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basket_Reprice_Category_Code__c</fullName>
        <label>Basket Reprice Category Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basket_Reprice_Category_Desc__c</fullName>
        <label>Basket Reprice Category Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch</description>
        <inlineHelpText>Branch</inlineHelpText>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipName>Branch_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_ID_Name__c</fullName>
        <description>Populates the Business Unit ID based on the Plant Selected - used for Plant Product search results</description>
        <label>Business Unit ID Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Ab_Number__c</fullName>
        <label>Buyer Ab Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <label>Buyer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Number__c</fullName>
        <label>Carrier Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Changed_By_Name__c</fullName>
        <label>Changed By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_User_Id__c</fullName>
        <label>Changed By User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Availability_Flag__c</fullName>
        <label>Check Availability Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checksum__c</fullName>
        <description>Used for integration job</description>
        <label>Checksum</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Category__c</fullName>
        <label>Commission Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Method__c</fullName>
        <label>Commitment Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Spec_Days__c</fullName>
        <label>Commitment Spec Days</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Code__c</fullName>
        <label>Commodity Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_type__c</fullName>
        <label>Component type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Category_Code__c</fullName>
        <label>Cycle Count Category Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Category_Desc__c</fullName>
        <label>Cycle Count Category Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Future_Use__c</fullName>
        <label>Date Future Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defer_Damper_Days__c</fullName>
        <label>Defer Damper Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_Group_Code__c</fullName>
        <label>Dispatch Group Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Group_Desc__c</fullName>
        <label>Dispatch Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eco_Number__c</fullName>
        <label>Eco Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Change_Date__c</fullName>
        <label>Engineering Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Chg_Reason_Code__c</fullName>
        <label>Engineering Chg Reason Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Chg_Reason_Desc__c</fullName>
        <label>Engineering Chg Reason Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Damper_Days__c</fullName>
        <label>Expedite Damper Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fifo_Processing__c</fullName>
        <label>Fifo Processing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Variable_Leadtime__c</fullName>
        <label>Fixed Variable Leadtime</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freeze_Time_Fence_Days__c</fullName>
        <label>Freeze Time Fence Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Grade_Code__c</fullName>
        <label>From Grade Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Grade_Desc__c</fullName>
        <label>From Grade Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Potency__c</fullName>
        <label>From Potency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gl_Category_Code__c</fullName>
        <label>Gl Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gl_Category_Desc__c</fullName>
        <label>Gl Category Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Control__c</fullName>
        <label>Grade Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_NUMBER_ID__c</fullName>
        <externalId>true</externalId>
        <label>Item Number ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_type_Code__c</fullName>
        <label>Issue type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_2Nd_Item_Number__c</fullName>
        <label>Item 2Nd Item Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_3Rd_Item_Number__c</fullName>
        <label>Item 3Rd Item Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc_2__c</fullName>
        <label>Item Desc 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <label>Item Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Display_Code__c</fullName>
        <label>Item Display Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_First_Received_Date__c</fullName>
        <label>Item First Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_First_Used_Date__c</fullName>
        <label>Item First Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Flash_Message_Code__c</fullName>
        <label>Item Flash Message Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Flash_Message_Desc__c</fullName>
        <label>Item Flash Message Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Last_Activity_Date__c</fullName>
        <label>Item Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Last_Received_Date__c</fullName>
        <label>Item Last Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Last_Used_Date__c</fullName>
        <label>Item Last Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Price_Group_Code__c</fullName>
        <label>Item Price Group Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Price_Group_Desc__c</fullName>
        <label>Item Price Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Reinstated_Date__c</fullName>
        <label>Item Reinstated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Revision_Level__c</fullName>
        <label>Item Revision Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Setup_Date__c</fullName>
        <label>Item Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layer_Code_Source__c</fullName>
        <label>Layer Code Source</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadtime_Cumulative__c</fullName>
        <label>Leadtime Cumulative</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadtime_Level__c</fullName>
        <label>Leadtime Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadtime_Mfg__c</fullName>
        <label>Leadtime Mfg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadtime_Per_Unit__c</fullName>
        <label>Leadtime Per Unit</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_type__c</fullName>
        <label>Line type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Status_Code__c</fullName>
        <label>Lot Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Status_Desc__c</fullName>
        <label>Lot Status Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Level_Code__c</fullName>
        <label>Low Level Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Buy_Code__c</fullName>
        <label>Make Buy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Maintenance_Percent__c</fullName>
        <label>Margin Maintenance Percent</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <label>Margin Percent</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Time_Fence_Days__c</fullName>
        <label>Message Time Fence Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mfg_Leadtime_Quantity__c</fullName>
        <label>Mfg Leadtime Quantity</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Hours_Standard__c</fullName>
        <label>Move Hours Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mps_Mrp_Time_Fence_4__c</fullName>
        <label>Mps Mrp Time Fence 4</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Change_Flag__c</fullName>
        <label>Net Change Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete_Date__c</fullName>
        <label>Obsolete Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Multiples_Mrp_Quantity__c</fullName>
        <label>Order Multiples Mrp Quantity</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Multiples_Quantity__c</fullName>
        <label>Order Multiples Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Policy_Code__c</fullName>
        <label>Order Policy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Reprice_Category_Code__c</fullName>
        <label>Order Reprice Category Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Reprice_Category_Desc__c</fullName>
        <label>Order Reprice Category Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_With__c</fullName>
        <label>Order With</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Time_Fence_Days__c</fullName>
        <label>Plan Time Fence Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Time_Fence_Rule_Code__c</fullName>
        <label>Plan Time Fence Rule Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Time_Fence_Rule_Desc__c</fullName>
        <label>Plan Time Fence Rule Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Ab_Number__c</fullName>
        <label>Planner Ab Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planner_Name__c</fullName>
        <label>Planner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Code__c</fullName>
        <label>Planning Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <description>Name of Plant - used for Search purposes on lookups</description>
        <label>Plant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potency_Control__c</fullName>
        <label>Potency Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Carrier_Purch_Name__c</fullName>
        <label>Preferred Carrier Purch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Carrier_Purchasing__c</fullName>
        <label>Preferred Carrier Purchasing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Frequency_Code__c</fullName>
        <label>Pricing Frequency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Supplier_Ab_Nbr_Prev__c</fullName>
        <label>Primary Supplier Ab Nbr Prev</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Supplier_Ab_Number__c</fullName>
        <label>Primary Supplier Ab Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Supplier_Name__c</fullName>
        <label>Primary Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Message_Code__c</fullName>
        <label>Print Message Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Message_Desc__c</fullName>
        <label>Print Message Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <label>Product Group Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Desc__c</fullName>
        <label>Product Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <inlineHelpText>Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_10_Desc__c</fullName>
        <label>Purchase Category Code 10 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_10__c</fullName>
        <label>Purchase Category Code 10</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_1_Desc__c</fullName>
        <label>Purchase Category Code 1 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_1__c</fullName>
        <label>Purchase Category Code 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_2_Desc__c</fullName>
        <label>Purchase Category Code 2 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Category_Code_2__c</fullName>
        <label>Purchase Category Code 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Taxable_Flag__c</fullName>
        <label>Purchasing Taxable Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Hours_Standard__c</fullName>
        <label>Queue Hours Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Point_Input__c</fullName>
        <label>Reorder Point Input</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Quantity_Input__c</fullName>
        <label>Reorder Quantity Input</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Quantity_Max__c</fullName>
        <label>Reorder Quantity Max</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Quantity_Min__c</fullName>
        <label>Reorder Quantity Min</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_To_Whole_Number__c</fullName>
        <label>Round To Whole Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Leadtime__c</fullName>
        <label>Safety Leadtime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safety_Stock__c</fullName>
        <label>Safety Stock</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_10_Desc__c</fullName>
        <label>Sales Category Code 10 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_10__c</fullName>
        <label>Sales Category Code 10</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_1_Desc__c</fullName>
        <label>Sales Category Code 1 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_1__c</fullName>
        <label>Sales Category Code 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_2_Desc__c</fullName>
        <label>Sales Category Code 2 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category_Code_2__c</fullName>
        <label>Sales Category Code 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Taxable_Flag__c</fullName>
        <label>Sales Taxable Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_required__c</fullName>
        <label>Serial Number required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Labor_Standard__c</fullName>
        <label>Setup Labor Standard</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Days__c</fullName>
        <label>Shelf Life Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Leadtime_Offset__c</fullName>
        <label>Ship Leadtime Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Commodity_Class_Desc__c</fullName>
        <label>Shipping Commodity Class Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions_Code__c</fullName>
        <label>Shipping Conditions Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions_Desc__c</fullName>
        <label>Shipping Conditions Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shrink_Factor_Method__c</fullName>
        <label>Shrink Factor Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shrink_Factor__c</fullName>
        <label>Shrink Factor</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specie__c</fullName>
        <description>Specie related to Product from Plant - for lookup and search purposes</description>
        <label>Specie</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Grade_Code__c</fullName>
        <label>Standard Grade Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Grade_Desc__c</fullName>
        <label>Standard Grade Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Potency__c</fullName>
        <label>Standard Potency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Uom_Conversion__c</fullName>
        <label>Standard Uom Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocking_type_Code__c</fullName>
        <label>Stocking type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocking_type_Desc__c</fullName>
        <label>Stocking type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stocking_type_Previous__c</fullName>
        <label>Stocking type Previous</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thru_Grade_Code__c</fullName>
        <label>Thru Grade Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thru_Grade_Desc__c</fullName>
        <label>Thru Grade Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thru_Potency__c</fullName>
        <label>Thru Potency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Basis_Code__c</fullName>
        <label>Time Basis Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Basis_Desc__c</fullName>
        <label>Time Basis Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Batch_Quantity__c</fullName>
        <label>Units Batch Quantity</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Per_Container__c</fullName>
        <label>Units Per Container</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Amount__c</fullName>
        <label>User Reserved Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Code__c</fullName>
        <label>User Reserved Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Date__c</fullName>
        <label>User Reserved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Number__c</fullName>
        <label>User Reserved Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Reference__c</fullName>
        <label>User Reserved Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Order_Policy__c</fullName>
        <label>Value Order Policy</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Entr_Full_Pall_Qty__c</fullName>
        <label>Web Entr Full Pall Qty</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type_Warranty__c</fullName>
        <label>type Warranty</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Plant Product</label>
    <listViews>
        <fullName>Branch_Products</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Item_Desc__c</columns>
        <columns>ITEM_NUMBER_ID__c</columns>
        <columns>Print_Message_Desc__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sales_Category_Code_2_Desc__c</columns>
        <columns>Sales_Category_Code_3_Desc__c</columns>
        <columns>Sales_Category_Code_4_Desc__c</columns>
        <columns>Product_Group_Code__c</columns>
        <columns>Product_Group_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Branch Products</label>
    </listViews>
    <nameField>
        <label>Plant Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Products</pluralLabel>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>Sales Record Type for Product Branch</description>
        <label>Branch-Product_Sales</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>